--- a/app/src/main/res/layout/fragment_three.xml
+++ b/app/src/main/res/layout/fragment_three.xml
@@ -7,9 +7,7 @@
     <ImageView
         android:id="@+id/imgMain"
         android:src="@drawable/norderney"
-        android:scaleType="centerCrop"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        style="@style/Bilder" />
 
     <TextView
         android:id="@+id/txtMain"
@@ -17,19 +15,12 @@
         android:layout_height="wrap_content" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             style="@style/Fragen"
             android:text="@string/Frage_drei"/>
 
     <LinearLayout
-        android:id="@+id/checkbox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:orientation="vertical"
-        android:layout_alignParentBottom="true"
-        android:background="#FFFFFF">
+        style="@style/CheckBox_General"
+        android:id="@+id/checkbox">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,22 +29,15 @@
 
         <CheckBox
             android:id="@+id/checkbox_juist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="#FFFFFF"
+            style="@style/CheckBox"
             android:text="@string/Juist" />
         <CheckBox
             android:id="@+id/checkbox_sylt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            style="@style/CheckBox"
             android:text="@string/Sylt"/>
         <CheckBox
             android:id="@+id/checkbox_borkum"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            style="@style/CheckBox"
             android:text="@string/Borkum" />
 
         </LinearLayout>
@@ -65,21 +49,15 @@
 
         <CheckBox
             android:id="@+id/checkbox_ruegen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            style="@style/CheckBox"
             android:text="@string/Ruegen" />
         <CheckBox
             android:id="@+id/checkbox_norderney"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            style="@style/CheckBox"
             android:text="@string/Norderney" />
         <CheckBox
             android:id="@+id/checkbox_wangerooge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            style="@style/CheckBox"
             android:text="@string/Wangerooge" />
     </LinearLayout>
     </LinearLayout>
