--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="background_white">#FFFFFF</color>
+    <color name="text_color">#000000</color>
+    <color name="color_bar">#757575</color>
+    <color name="background_white_transparent">#BFFFFFFF</color>
+
+
+    #BDBDBD
 </resources>
