--- a/app/src/main/res/layout/fragment_five.xml
+++ b/app/src/main/res/layout/fragment_five.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imgMain"
-        android:src="@drawable/kanufahren"
-        style="@style/Bilder" />
+        style="@style/Bilder"
+        android:src="@drawable/kanufahren" />
 
     <TextView
         android:id="@+id/txtMain"
@@ -17,17 +17,23 @@
     <TextView
         android:id="@+id/fluss_niedersachsen_text"
         style="@style/Fragen"
-        android:text="@string/Frage_fünf"/>
+        android:text="@string/Frage_fünf" />
 
     <TextView
         android:id="@+id/erklärung"
         style="@style/Erklaerung"
         android:layout_below="@+id/fluss_niedersachsen_text"
-        android:text="@string/Erklärung"/>
+        android:text="@string/Erklärung" />
+
+    <Button
+        android:id="@+id/button_id_fünf"
+        style="@style/Button"
+        android:text="@string/Antwort_abschicken" />
 
     <EditText
         android:id="@+id/fluss_niedersachsen"
         style="@style/Edit_Text"
-        android:hint="@string/fluss" />
+        android:hint="@string/fluss"
+        android:layout_above="@id/button_id_fünf"/>
 
 </RelativeLayout>
