--- a/app/src/main/res/layout/fragment_four.xml
+++ b/app/src/main/res/layout/fragment_four.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imgMain"
-        android:src="@drawable/studenten"
-        style="@style/Bilder" />
+        style="@style/Bilder"
+        android:src="@drawable/studenten" />
 
     <TextView
         android:id="@+id/txtMain"
@@ -17,17 +17,23 @@
     <TextView
         android:id="@+id/uni_stadt_text"
         style="@style/Fragen"
-        android:text="@string/Frage_vier"/>
+        android:text="@string/Frage_vier" />
 
     <TextView
         android:id="@+id/erklärung"
         style="@style/Erklaerung"
         android:layout_below="@+id/uni_stadt_text"
-        android:text="@string/Erklärung"/>
+        android:text="@string/Erklärung" />
 
-   <EditText
-       android:id="@+id/uni_stadt"
-       style="@style/Edit_Text"
-       android:hint="@string/uni_stadt" />
+    <Button
+        android:id="@+id/button_id_vier"
+        style="@style/Button"
+        android:text="@string/Antwort_abschicken" />
+
+    <EditText
+        android:id="@+id/uni_stadt"
+        style="@style/Edit_Text"
+        android:hint="@string/uni_stadt"
+        android:layout_above="@id/button_id_vier"/>
 
 </RelativeLayout>
