--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imgMain"
-        android:src="@drawable/wattenmeer"
-        style="@style/Bilder" />
+        style="@style/Bilder"
+        android:src="@drawable/wattenmeer" />
 
     <TextView
         android:id="@+id/txtMain"
@@ -16,17 +16,26 @@
 
     <TextView
         style="@style/Fragen"
-        android:text="@string/Frage_eins"/>
+        android:text="@string/Frage_eins" />
 
-    <RadioGroup
-        style="@style/Radio_Group">
+    <Button
+        android:id="@+id/button_id_eins"
+        style="@style/Button"
+        android:text="@string/Antwort_abschicken" />
+
+    <RadioGroup style="@style/Radio_Group"
+        android:id="@+id/radio_group"
+        android:layout_above="@id/button_id_eins">
+
         <RadioButton
             android:id="@+id/yes_radio_button"
             style="@style/Radio_Button"
             android:text="@string/ja" />
+
         <RadioButton
             android:id="@+id/no_radio_button"
             style="@style/Radio_Button"
             android:text="@string/nein" />
     </RadioGroup>
+
 </RelativeLayout>
