--- a/app/src/main/res/layout/fragment_three.xml
+++ b/app/src/main/res/layout/fragment_three.xml
@@ -1,66 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imgMain"
-        android:src="@drawable/norderney"
-        style="@style/Bilder" />
+        style="@style/Bilder"
+        android:src="@drawable/norderney" />
 
     <TextView
         android:id="@+id/txtMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-        <TextView
-            style="@style/Fragen"
-            android:text="@string/Frage_drei"/>
+    <TextView
+        style="@style/Fragen"
+        android:text="@string/Frage_drei" />
+
+    <Button
+        android:id="@+id/button_id_drei"
+        style="@style/Button"
+        android:text="@string/Antwort_abschicken" />
 
     <LinearLayout
+        android:id="@+id/checkbox"
         style="@style/CheckBox_General"
-        android:id="@+id/checkbox">
+        android:layout_above="@id/button_id_drei">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-        <CheckBox
-            android:id="@+id/checkbox_juist"
-            style="@style/CheckBox"
-            android:text="@string/Juist" />
-        <CheckBox
-            android:id="@+id/checkbox_sylt"
-            style="@style/CheckBox"
-            android:text="@string/Sylt"/>
-        <CheckBox
-            android:id="@+id/checkbox_borkum"
-            style="@style/CheckBox"
-            android:text="@string/Borkum" />
+            <CheckBox
+                android:id="@+id/checkbox_juist"
+                style="@style/CheckBox"
+                android:text="@string/Juist" />
+
+            <CheckBox
+                android:id="@+id/checkbox_sylt"
+                style="@style/CheckBox"
+                android:text="@string/Sylt" />
+
+            <CheckBox
+                android:id="@+id/checkbox_borkum"
+                style="@style/CheckBox"
+                android:text="@string/Borkum" />
 
         </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-        <CheckBox
-            android:id="@+id/checkbox_ruegen"
-            style="@style/CheckBox"
-            android:text="@string/Ruegen" />
-        <CheckBox
-            android:id="@+id/checkbox_norderney"
-            style="@style/CheckBox"
-            android:text="@string/Norderney" />
-        <CheckBox
-            android:id="@+id/checkbox_wangerooge"
-            style="@style/CheckBox"
-            android:text="@string/Wangerooge" />
+            <CheckBox
+                android:id="@+id/checkbox_ruegen"
+                style="@style/CheckBox"
+                android:text="@string/Ruegen" />
+
+            <CheckBox
+                android:id="@+id/checkbox_norderney"
+                style="@style/CheckBox"
+                android:text="@string/Norderney" />
+
+            <CheckBox
+                android:id="@+id/checkbox_wangerooge"
+                style="@style/CheckBox"
+                android:text="@string/Wangerooge" />
+        </LinearLayout>
     </LinearLayout>
-    </LinearLayout>
 
-
-    </RelativeLayout>
+</RelativeLayout>
