--- a/app/src/main/res/layout/fragment_zero.xml
+++ b/app/src/main/res/layout/fragment_zero.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/txtMain"
@@ -12,14 +12,14 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/Quiz"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:text="@string/Quiz" />
 
     <ImageView
         android:id="@+id/imgMain"
-        android:src="@drawable/luneburgerheide"
-        style="@style/Bilder" />
+        style="@style/Bilder"
+        android:src="@drawable/luneburgerheide" />
 
     <TextView
         android:id="@+id/quiz"
