--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,26 +12,26 @@
 
 
     <style name="Fragen">
-    <item name="android:layout_width">wrap_content</item>
-    <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/text_color</item>
-    <item name="android:textAllCaps">true</item>
+        <item name="android:textAllCaps">true</item>
         <item name="android:layout_margin">@dimen/layout_margin</item>
         <item name="android:background">@color/background_white_transparent</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Large</item>
-    <item name="android:layout_alignParentTop">true</item>
-    <item name="android:layout_centerHorizontal">true</item>
-</style>
+        <item name="android:layout_alignParentTop">true</item>
+        <item name="android:layout_centerHorizontal">true</item>
+    </style>
 
     <style name="Erklaerung">
-    <item name="android:layout_width">wrap_content</item>
-    <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/text_color</item>
-    <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:layout_centerHorizontal">true</item>
         <item name="android:background">@color/background_white_transparent</item>
         <item name="android:layout_margin">@dimen/layout_margin</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Small</item>
-</style>
+    </style>
 
     <style name="Quiz_Start">
         <item name="android:layout_width">wrap_content</item>
@@ -56,15 +56,14 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">horizontal</item>
-        <item name="android:layout_alignParentBottom">true</item>
         <item name="android:layout_centerHorizontal">true</item>
         <item name="android:padding">@dimen/padding</item>
         <item name="android:background">@color/background_white_transparent</item>
     </style>
 
     <style name="Radio_Button">
-    <item name="android:layout_width">wrap_content</item>
-    <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/text_color</item>
     </style>
 
@@ -73,7 +72,6 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">@dimen/padding</item>
         <item name="android:orientation">vertical</item>
-        <item name="android:layout_alignParentBottom">true</item>
         <item name="android:background">@color/background_white_transparent</item>
     </style>
 
@@ -89,7 +87,6 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">@dimen/padding</item>
         <item name="android:textColor">@color/text_color</item>
-        <item name="android:layout_alignParentBottom">true</item>
         <item name="android:background">@color/background_white_transparent</item>
         <item name="android:inputType">textCapWords</item>
     </style>
@@ -100,7 +97,7 @@
         <item name="android:textColor">@color/text_color</item>
         <item name="android:padding">@dimen/padding</item>
         <item name="android:layout_alignParentBottom">true</item>
-        <item name="android:background">@color/background_white_transparent</item>
+        <item name="android:background">@color/background_white</item>
     </style>
 
 </resources>
